# go2_ros2

./: Dockerfile  build_and_run.sh  entrypoint.sh
dependencies/: cyclonedds.xml
src/: cyclonedds.xml
src/go2_bridge/: CMakeLists.txt  package.xml
src/go2_bridge/config/: gains.yaml
src/go2_bridge/src/: go2_bridge_node.cpp  motor_crc.hpp
src/go2_controller/: CMakeLists.txt  package.xml
src/go2_controller/src/: go2_damp_service.cpp  go2_sport_mode_service.cpp
src/go2_controller/srv/: Go2SportMode.srv
src/go2_velocity/: CMakeLists.txt  package.xml
src/go2_velocity/config/: go2_velocity.yaml
src/go2_velocity/launch/: bringup.launch.xml
src/go2_velocity/model/: policy.onnx
src/go2_velocity/src/: go2_velocity_node.cpp  motor_crc.cpp  motor_crc.hpp
src/ros2-vicon-receiver/vicon_receiver/launch/: client.launch.xml
src/unitree_ros2_examples/src/go2/: go2_stand_example.cpp
